# propel

./: .clang-format  .clang-tidy  CMakeLists.txt
include/propel/: PURQ.hpp  RURQ.hpp  StaticRQ.hpp  extra_functional.hpp  int_literals.hpp  ints.hpp
include/propel/algebra/: basic.hpp  concepts.hpp  helper.hpp  pow.hpp
include/propel/range_queries/: DisjointSparseTable.hpp  FenwickTree.hpp  PrefixSum.hpp  TwoFenwickTrees.hpp
integration_tests/PURQ/: Sum.cpp
integration_tests/RURQ/: Sum.cpp
integration_tests/StaticRQ/: Lambda.cpp  Min.cpp  Sum.cpp  Xor.cpp  thing.py
scripts/: to_python.py
tests/: algebra.cpp  ints.cpp
unit_tests/range_queries/: PrefixSum.cpp
